# simpermut-rc

./: .gitignore  Cargo.toml  README.md  config.json  data - Kopie.simc  data.simc  example.config.json  multitalent.bat  simc.lib
src/: configuration.rs  main.rs  template.rs
src/simcraft/: item.rs  item_map.rs  mod.rs  report.rs  slot.rs  statistic.rs
templates/: dh.havoc.bfa.simc  dh.legion.simc  global_conf_v1.simc  hunter.bfa.simc  report.html  report_list_entry.html
