[package]
name = "sim_permut"
version = "0.3.1"
authors = ["dmorigin <stephan@kirfel-koeln.de>"]

[dependencies]
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
regex = "1.0.0"
clap = "2.32.0"
chrono = "0.4.0"
uuid = { version = "0.6", features = ["v4"] }
indicatif = "0.9.0"
rand = "0.5.5"